fixing visibility of autocomplete box

--- a/portal/drupal/www/sites/all/themes/corporateclean/css/search.css
+++ b/portal/drupal/www/sites/all/themes/corporateclean/css/search.css
@@ -7,6 +7,7 @@
 }
 .front #block-search-form h2,
 .front #block-search-form ul {display:none;}
+.front #block-search-form  #autocomplete ul{ display: block; }
 
 .front #block-search-form .container-inline {width:700px; overflow:hidden;}
 
